--- a/UISecondView/Storyboard.storyboard
+++ b/UISecondView/Storyboard.storyboard
@@ -43,16 +43,19 @@
         <!--Second View Controller-->
         <scene sceneID="SiQ-3k-eh1">
             <objects>
-                <viewController id="QDG-Uf-AIM" customClass="SecondViewController" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="overFullScreen" id="QDG-Uf-AIM" customClass="SecondViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="eAt-BP-5Jh"/>
                         <viewControllerLayoutGuide type="bottom" id="0he-DN-gnV"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="tn6-2y-hUV">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="200" height="100"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="0.1693259533" blue="0.13339427779999999" alpha="1" colorSpace="calibratedRGB"/>
                     </view>
+                    <value key="contentSizeForViewInPopover" type="size" width="200" height="100"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="200" height="100"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CWl-qV-hpr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
