floatViewController delegate swipe off is set.

--- a/UISecondView/Storyboard.storyboard
+++ b/UISecondView/Storyboard.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6154.21" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="gg2-Aa-JxC">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13E28" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="gg2-Aa-JxC">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6153.13"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <scenes>
         <!--Base View Controller-->
@@ -69,7 +69,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="FBr-bV-8Ek" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <swipeGestureRecognizer direction="right" id="NwM-ge-phD">
                     <connections>
-                        <action selector="swipeToDismiss:" destination="T3Q-su-0a7" id="BvF-Q9-YH2"/>
+                        <action selector="swiped:" destination="T3Q-su-0a7" id="bGb-0V-0o3"/>
                     </connections>
                 </swipeGestureRecognizer>
             </objects>
